// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component renders a list 1`] = `
@media  {
  .c-iTpJUe {
    list-style-position: inside;
    font-family: var(--fonts-body);
    display: flex;
    flex-direction: column;
    gap: var(--space-2);
    margin: unset;
    padding: unset;
  }
}

@media  {
  .c-iTpJUe-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-iTpJUe-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-iTpJUe-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-iTpJUe-fmPQHp-noCapsize-true::before,
  .c-iTpJUe-fmPQHp-noCapsize-true::after {
    display: none !important;
  }

  .c-iTpJUe-ldmvkx-as-ul {
    padding-left: var(--space-3);
  }

  .c-iTpJUe-ldmvkx-as-ul > .c-PJLV {
    padding-left: var(--space-2);
  }

  .c-iTpJUe-ldmvkx-as-ul > .c-PJLV::marker {
    content: "• ";
    font-weight: bold;
  }
}

<div>
  <ul
    class="c-iTpJUe c-iTpJUe-gvmVBy-size-md c-iTpJUe-fmPQHp-noCapsize-true c-iTpJUe-ldmvkx-as-ul"
  >
    <li
      class="c-PJLV"
    >
      Item 1
    </li>
    <li
      class="c-PJLV"
    >
      Item 2
    </li>
  </ul>
</div>
`;

exports[`List component renders an unordered list with a primary theme 1`] = `
@media  {
  .c-iTpJUe {
    list-style-position: inside;
    font-family: var(--fonts-body);
    display: flex;
    flex-direction: column;
    gap: var(--space-2);
    margin: unset;
    padding: unset;
  }
}

@media  {
  .c-iTpJUe-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-iTpJUe-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-iTpJUe-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-iTpJUe-fmPQHp-noCapsize-true::before,
  .c-iTpJUe-fmPQHp-noCapsize-true::after {
    display: none !important;
  }

  .c-iTpJUe-ldmvkx-as-ul {
    padding-left: var(--space-3);
  }

  .c-iTpJUe-ldmvkx-as-ul > .c-PJLV {
    padding-left: var(--space-2);
  }

  .c-iTpJUe-ldmvkx-as-ul > .c-PJLV::marker {
    content: "• ";
    font-weight: bold;
  }

  .c-iTpJUe-bEVto-as-ol {
    padding-left: var(--space-4);
    list-style-type: decimal;
  }

  .c-iTpJUe-bEVto-as-ol > .c-PJLV {
    padding-left: var(--space-1);
  }

  .c-iTpJUe-bEVto-as-ol > .c-PJLV::marker {
    font-size: .875em;
    font-weight: bold;
  }

  .c-iTpJUe-gvBFgi-theme-primary > .c-PJLV::marker {
    color: var(--colors-primary);
  }
}

<div>
  <ul
    class="c-iTpJUe c-iTpJUe-gvmVBy-size-md c-iTpJUe-fmPQHp-noCapsize-true c-iTpJUe-ldmvkx-as-ul c-iTpJUe-gvBFgi-theme-primary"
  >
    <li
      class="c-PJLV"
    >
      Item 1
    </li>
    <li
      class="c-PJLV"
    >
      Item 2
    </li>
  </ul>
</div>
`;
